adjustable timer settings

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <a href="#" id="addWork" class="incdec">+</a>
                     <a href="#" id="minusWork" class="incdec">-</a>
                 </div> 
+                <div id="selector">
+                    <a href="#">Work</a>
+                    <a href="#">Break</a>
+                </div>
                 <div id="break"> <b>Break Time</b>
                     <p id="breakVal">5</p>
                     <a href="#" id="addBreak" class="incdec">+</a>
@@ -26,7 +30,8 @@
                 </div>
         </div>
             <div id="session">
-                <span class="time-left" id="time-min">25</span>:<span class="time-left" id="time-sec">00</span></div>
+                <span class="time-left" id="time-min">25</span>:<span class="time-left" id="time-sec">00</span>
+            </div>
             <div id="playSettings">
                 <div id="start"><button onclick="myFunction()" id="playButton" class="button-play"></button></div>
                 <div id="stop"><button onclick="stopFunction()" id="stopButton"></button></div>
