Functional timer with buzzer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <a href="#" id="minusWork" class="incdec">-</a>
                 </div> 
                 <div id="selector">
-                    <a href="#">Work</a>
-                    <a href="#">Break</a>
+                    <a href="#" id="switchToWork">Work</a>
+                    <a href="#" id="switchToBreak">Break</a>
                 </div>
                 <div id="break"> <b>Break Time</b>
                     <p id="breakVal">5</p>
